Added code to create a dataframe to get the required data.

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -86,6 +86,39 @@
     "import os\n",
     "# imports os"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd3bdb2",
+   "metadata": {},
+   "source": [
+    "Now that I have the packages, I require I can now start making the program.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5eecc66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get data():\n",
+    "\n",
+    "# This first section downloads hourly data for the last 5 days for FAANG (META, AAPL, AMZN, NFLX, GOOG)\n",
+    "# it then saves the data in the required format in a .csv file.\n",
+    "\n",
+    "# Produce the ticker list for the required companies.\n",
+    "# This essentially means I will get the stocks for the 5 companies.\n",
+    "tickers = [\"META\",\"AAPL\",\"AMZN\",\"NFLX\",\"GOOG\"]\n",
+    "\n",
+    "# This next section of code downloads the data for the last 5 days\n",
+    "# variables: period = 5 days, interval = 1hr\n",
+    "# The variables and period slected mean that for the last 5 calander days, I get the data for each hour. \n",
+    "# group_by= \"ticker\" means the returned DataFrame will contain columns grouped by ticker\n",
+    "data = yf.download(tickers, period=\"5d\", interval = \"1hr\", group_by = \"ticker\", auto_adjust = True)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
