Added code to complete problem one, so that the data is saved to a .csv file

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8b90dff3",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
       "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.31->yfinance) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.31->yfinance) (2.5.0)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
      ]
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "9ee99159",
    "metadata": {},
    "outputs": [],
@@ -97,27 +97,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b5eecc66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  5 of 5 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to data/20251112-110731.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def get data():\n",
+    "def get_data():\n",
+    "    # This first section downloads hourly data for the last 5 days for FAANG (META, AAPL, AMZN, NFLX, GOOG)\n",
+    "    # It then saves the data in the required format in a .csv file.\n",
     "\n",
-    "# This first section downloads hourly data for the last 5 days for FAANG (META, AAPL, AMZN, NFLX, GOOG)\n",
-    "# it then saves the data in the required format in a .csv file.\n",
+    "    # Produce the ticker list for the required companies.\n",
+    "    # This essentially means I will get the stocks for the 5 companies.\n",
+    "    tickers = [\"META\", \"AAPL\", \"AMZN\", \"NFLX\", \"GOOG\"]\n",
     "\n",
-    "# Produce the ticker list for the required companies.\n",
-    "# This essentially means I will get the stocks for the 5 companies.\n",
-    "tickers = [\"META\",\"AAPL\",\"AMZN\",\"NFLX\",\"GOOG\"]\n",
+    "    # This next section of code downloads the data for the last 5 days.\n",
+    "    # Variables: period = 5 days, interval = 1 hour.\n",
+    "    # The variables and period selected mean that for the last 5 calendar days, \n",
+    "    # I get the data for each hour. \n",
+    "    # group_by = \"ticker\" means the returned DataFrame will contain columns grouped by ticker.\n",
+    "    data = yf.download(\n",
+    "        tickers,\n",
+    "        period=\"5d\",\n",
+    "        interval=\"1h\",      # Must use \"1h\" (not \"1hr\") for hourly data\n",
+    "        group_by=\"ticker\",\n",
+    "        auto_adjust=True\n",
+    "    )\n",
     "\n",
-    "# This next section of code downloads the data for the last 5 days\n",
-    "# variables: period = 5 days, interval = 1hr\n",
-    "# The variables and period slected mean that for the last 5 calander days, I get the data for each hour. \n",
-    "# group_by= \"ticker\" means the returned DataFrame will contain columns grouped by ticker\n",
-    "data = yf.download(tickers, period=\"5d\", interval = \"1hr\", group_by = \"ticker\", auto_adjust = True)\n",
+    "    # Ensure the 'data' folder exists\n",
+    "    os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
-    "\n"
+    "    # Create timestamped filename \n",
+    "    # The format is YYYYMMDD-HHmmss, e.g. 20251112-213215.csv\n",
+    "    timestamp = dt.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    filename = f\"data/{timestamp}.csv\"\n",
+    "    \n",
+    "    # Save data to CSV\n",
+    "    data.to_csv(filename)\n",
+    "    \n",
+    "    # Print confirmation message\n",
+    "    print(f\"Data saved to {filename}\")\n",
+    "\n",
+    "# Run the function to execute everything\n",
+    "get_data()\n"
    ]
   }
  ],
