--- a/problems.ipynb
+++ b/problems.ipynb
@@ -13,7 +13,7 @@
    "id": "210d08e4",
    "metadata": {},
    "source": [
-    "## Problem 1"
+    "## Problem 1: Basic FAANG Data Acquisiton using yFinance"
    ]
   },
   {
@@ -71,6 +71,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a173b0c",
+   "metadata": {},
+   "source": [
+    "The following Python packages are used in this problem:\n",
+    "\n",
+    "- `yfinance`: To access historical financial data directly from Yahoo Finance using its public API.\n",
+    "- `pandas`: To manipulate and export the downloaded data into a `.csv` file.\n",
+    "- `datetime`: To create a timestamp for the file naming convention.\n",
+    "- `os`: To check if the `data/` folder exists and create it if necessary.\n",
+    "\n",
+    "References:\n",
+    "- `yfinance` Documentation: [https://pypi.org/project/yfinance/](https://pypi.org/project/yfinance/)  \n",
+    "- `pandas` Official Documents: [https://pandas.pydata.org/docs/](https://pandas.pydata.org/docs/)  \n",
+    "- Python Standard Library (datetime & os): [https://docs.python.org/3/library/](https://docs.python.org/3/library/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "9ee99159",
@@ -93,6 +111,30 @@
    "metadata": {},
    "source": [
     "Now that I have the packages, I require I can now start making the program.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c12ab62",
+   "metadata": {},
+   "source": [
+    "This section defines a function called `get_data()` this downloads the hourly stock price data for the previous five days for the five FAANG companies:  \n",
+    "\n",
+    "- Facebook (META)\n",
+    "- Apple (AAPL)\n",
+    "- Amazon (AMZN)\n",
+    "- Netflix (NFLX)\n",
+    "- Google (GOOG)\n",
+    "\n",
+    "The data is saved into a folder named `data/` within the project directory, with a the filename will be a timestamp in the format:\n",
+    "\n",
+    "YYYYMMDD-HHmmss.csv\n",
+    "(e.g. 20251112-213215.csv)\n",
+    "\n",
+    "This timestamp ensures each download is unique and prevents overwriting of existing files.\n",
+    "\n",
+    "References:\n",
+    "- Yahoo Finance (data source): [https://finance.yahoo.com/](https://finance.yahoo.com/)"
    ]
   },
   {
