Created and test program for problem three. Can now use ./faang to generate the .csv file and corresponding plot.png file, with proper timestamps.

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "51e72097",
    "metadata": {},
    "outputs": [
@@ -294,6 +294,8 @@
     "    plt.show()\n",
     "\n",
     "    print(f\"Plot saved to {plot_filename}\")\n",
+    "    # This will always show the latest plot in the notebook, so one can see and examine the most up to date one. \n",
+    "    # The file will still be saved for future analysis.\n",
     "\n",
     "plot_data()\n"
    ]
