Added markdown cells explain what I needed to do for Problem 3.

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -307,13 +307,42 @@
    "source": [
     "### Error Note (22/11/2025):\n",
     "<div style=\"color: red;\">\n",
-    "There are two plots where the saved title is wrong they are:\n",
+    "In the plots folder there are two plots where the saved title is wrong they are:\n",
     "\n",
     "- 2025MMDD-013045.png\n",
     "\n",
     "- 2025MMDD-141351.png\n",
     "\n",
     "After eviewing the code I noted that the code for creating the timestamped file was incorrect and thus would not save the date in the required format. The fix was simple and I now have the date format corrected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3fa4716",
+   "metadata": {},
+   "source": [
+    "## Problem 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0830bd5",
+   "metadata": {},
+   "source": [
+    "For this problem I had to take the functions I wrote for Problems 1 and 2 to download the FAANG stock data and generate the plot.\n",
+    "\n",
+    "I then had to turn them into a standalone Python script that could be directly run from the terminal using ./faang.py."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8640912",
+   "metadata": {},
+   "source": [
+    "For this problem there were three things I needed to do:\n",
+    "1. Create the scripting file.\n",
+    "2. Add a shebang line.\n",
+    "3. Make the script executable."
    ]
   }
  ],
