Added details to the Problem 3 Markdown cells. This explains my approach and why the approach used works.

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -321,7 +321,7 @@
    "id": "e3fa4716",
    "metadata": {},
    "source": [
-    "## Problem 3"
+    "## Problem 3: Making the faang.py Executable File"
    ]
   },
   {
@@ -343,6 +343,116 @@
     "1. Create the scripting file.\n",
     "2. Add a shebang line.\n",
     "3. Make the script executable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3d710ad",
+   "metadata": {},
+   "source": [
+    "### Creating the Scripting File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bfa847",
+   "metadata": {},
+   "source": [
+    "I created a new file in the root directory of the respository: faang.py\n",
+    "\n",
+    "Then I copied my two main functions into it:\n",
+    "\n",
+    "- download_faang_data()\n",
+    "\n",
+    "- plot_data()\n",
+    "\n",
+    "I also added a main() function that runs both in sequence, and an if __name__ == \"__main__\": block so the script executes when run from the terminal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96a764e",
+   "metadata": {},
+   "source": [
+    "### Adding a Shebang Line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800685b7",
+   "metadata": {},
+   "source": [
+    "At the top of the file, I added the following shebang: #!/usr/bin/env python3\n",
+    "\n",
+    "This tells the operating system to execute the script using Python 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0509b1e0",
+   "metadata": {},
+   "source": [
+    "### Making the Script Exectuable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbcb6dda",
+   "metadata": {},
+   "source": [
+    "In the terminal, I changed the permissions on the script so it could be run like a normal program: chmod +x faang.py\n",
+    "\n",
+    "Then I ran the program using ./faang.py in the terminal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cdb31a2",
+   "metadata": {},
+   "source": [
+    "### Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8971bed",
+   "metadata": {},
+   "source": [
+    "The script successfully:\n",
+    "\n",
+    "- Downloaded 5 days of hourly FAANG stock data\n",
+    "\n",
+    "- Saved it into the data/ folder using a timestamped filename\n",
+    "\n",
+    "- Generated a plot of the close prices\n",
+    "\n",
+    "- Saved the plot into the plots/ folder\n",
+    "\n",
+    "I then tested the faang program the next day to ensure the program was working effectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "886e36cd",
+   "metadata": {},
+   "source": [
+    "### Why This Approach Works"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d4ccdf5",
+   "metadata": {},
+   "source": [
+    "1. Using a shebang allows the script to run without explicitly typing python.\n",
+    "\n",
+    "2. The main() function keeps the workflow organised.\n",
+    "\n",
+    "3. Putting the script at the root of the repo makes it easy to call from anywhere.\n",
+    "\n",
+    "4. Using timestamped filenames avoids overwriting old data and creates a history of runs. This is the same as how the functions work in the Jupyter Notebook.\n",
+    "\n",
+    "5. The script is now a fully standalone tool that anyone can execute on their machine."
    ]
   }
  ],
