Tidied references used for Problem 1.

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -78,15 +78,15 @@
    "source": [
     "The following Python packages are used in this problem:\n",
     "\n",
-    "- `yfinance`: To access historical financial data directly from Yahoo Finance using its public API.\n",
-    "- `pandas`: To manipulate and export the downloaded data into a `.csv` file.\n",
-    "- `datetime`: To create a timestamp for the file naming convention.\n",
-    "- `os`: To check if the `data/` folder exists and create it if necessary.\n",
+    "- `yfinance`: To access historical financial data directly from Yahoo Finance using its public API [1].\n",
+    "- `pandas`: To manipulate and export the downloaded data into a `.csv` file [2].\n",
+    "- `datetime`: To create a timestamp for the file naming convention [3].\n",
+    "- `os`: To check if the `data/` folder exists and create it if necessary [3].\n",
     "\n",
     "References:\n",
-    "- `yfinance` Documentation: [https://pypi.org/project/yfinance/](https://pypi.org/project/yfinance/)  \n",
-    "- `pandas` Official Documents: [https://pandas.pydata.org/docs/](https://pandas.pydata.org/docs/)  \n",
-    "- Python Standard Library (datetime & os): [https://docs.python.org/3/library/](https://docs.python.org/3/library/)"
+    "1. `yfinance` Documentation: [https://pypi.org/project/yfinance/](https://pypi.org/project/yfinance/)  \n",
+    "2. `pandas` Official Documents: [https://pandas.pydata.org/docs/](https://pandas.pydata.org/docs/)  \n",
+    "3. Python Standard Library (datetime & os): [https://docs.python.org/3/library/](https://docs.python.org/3/library/)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "id": "5c12ab62",
    "metadata": {},
    "source": [
-    "This section defines a function called `get_data()` this downloads the hourly stock price data for the previous five days for the five FAANG companies:  \n",
+    "This section defines a function called `get_data()` this downloads the hourly stock price data for the previous five days for the five FAANG companies [4]:  \n",
     "\n",
     "- Facebook (META)\n",
     "- Apple (AAPL)\n",
@@ -136,7 +136,8 @@
     "This timestamp ensures each download is unique and prevents overwriting of existing files.\n",
     "\n",
     "References:\n",
-    "- Yahoo Finance (data source): [https://finance.yahoo.com/](https://finance.yahoo.com/)"
+    "\n",
+    "4. Yahoo Finance (data source): [https://finance.yahoo.com/](https://finance.yahoo.com/)"
    ]
   },
   {
