--- a/problems.ipynb
+++ b/problems.ipynb
@@ -332,7 +332,17 @@
    "source": [
     "For this problem I had to take the functions I wrote for Problems 1 and 2 to download the FAANG stock data and generate the plot.\n",
     "\n",
-    "I then had to turn them into a standalone Python script that could be directly run from the terminal using ./faang.py."
+    "The goal was to allow the program to be run from the terminal using ./faang.py, following standard Unix-based scripting conventions [5]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfe1605e",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "5. GNU Core Utilities – File Permissions and chmod: https://www.gnu.org/software/coreutils/manual/html_node/chmod-invocation.html"
    ]
   },
   {
@@ -367,7 +377,17 @@
     "\n",
     "- plot_data()\n",
     "\n",
-    "I also added a main() function that runs both in sequence, and an if __name__ == \"__main__\": block so the script executes when run from the terminal."
+    "A main() function was added to execute both functions sequentially, along with an if __name__ == \"__main__\": block to ensure the script runs when executed directly from the terminal rather than when imported as a module [6]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a471b821",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "6. Python Documentation – __main__ and Program Structure: https://docs.python.org/3/library/__main__.html"
    ]
   },
   {
@@ -390,6 +410,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1db28690",
+   "metadata": {},
+   "source": [
+    "This shebang tells the operating system to locate and execute the script using the system’s Python 3 interpreter, improving portability across different environments [7]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46bd32ab",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "7. Python Documentation – Shebang Lines and Executable Scripts: https://docs.python.org/3/using/unix.html#executable-python-scripts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0509b1e0",
    "metadata": {},
    "source": [
@@ -402,6 +440,8 @@
    "metadata": {},
    "source": [
     "In the terminal, I changed the permissions on the script so it could be run like a normal program: chmod +x faang.py\n",
+    "\n",
+    "This command updates the file’s executable permission, which is required for direct execution on Unix-based systems such as Linux and macOS [5].\n",
     "\n",
     "Then I ran the program using ./faang.py in the terminal."
    ]
@@ -437,7 +477,7 @@
    "id": "886e36cd",
    "metadata": {},
    "source": [
-    "### Why This Approach Works"
+    "### Why This Works"
    ]
   },
   {
@@ -445,15 +485,39 @@
    "id": "5d4ccdf5",
    "metadata": {},
    "source": [
-    "1. Using a shebang allows the script to run without explicitly typing python.\n",
+    "Using a shebang allows the script to be executed without explicitly invoking the Python interpreter, which is standard practice for command-line tools [7].\n",
     "\n",
-    "2. The main() function keeps the workflow organised.\n",
+    "The use of a main() function helps structure the program clearly and improves maintainability [6].\n",
     "\n",
-    "3. Putting the script at the root of the repo makes it easy to call from anywhere.\n",
+    "Placing the script in the root of the repository makes it easily accessible from the command line without requiring path configuration [5].\n",
     "\n",
-    "4. Using timestamped filenames avoids overwriting old data and creates a history of runs. This is the same as how the functions work in the Jupyter Notebook.\n",
+    "Timestamped filenames prevent data from being overwritten and create a reproducible history of executions, consistent with the approach used in the Jupyter Notebook [8].\n",
     "\n",
-    "5. The script is now a fully standalone tool that anyone can execute on their machine."
+    "The script functions as a fully standalone tool that can be executed on any compatible system with Python installed, aligning with best practices for reusable command-line utilities [5]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "954363a2",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "1. yfinance Documentation: https://pypi.org/project/yfinance/\n",
+    "\n",
+    "2. pandas Official Documents: https://pandas.pydata.org/docs/\n",
+    "\n",
+    "3. Python Standard Library (datetime & os): https://docs.python.org/3/library/\n",
+    "\n",
+    "4. Yahoo Finance (data source): https://finance.yahoo.com/\n",
+    "\n",
+    "5. GNU Core Utilities – File Permissions and chmod: https://www.gnu.org/software/coreutils/manual/html_node/chmod-invocation.html\n",
+    "\n",
+    "6. Python Documentation – __main__ and Program Structure: https://docs.python.org/3/library/__main__.html\n",
+    "\n",
+    "7. Python Documentation – Shebang Lines and Executable Scripts: https://docs.python.org/3/using/unix.html#executable-python-scripts\n",
+    "\n",
+    "8. Python Documentation – datetime Module: https://docs.python.org/3/library/datetime.html"
    ]
   }
  ],
